src/snapshots/pond__tests__help_schedule.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Manage the automatic sync schedule.

Registers `pond sync -q` with the OS scheduler: launchd on macOS, systemd user timers (or a crontab fence) on Linux. `pond init` offers the same setup interactively.

Usage: pond schedule [OPTIONS] <COMMAND>

Commands:
  start   Register the schedule (idempotent: safe to re-run)
  stop    Remove the schedule
  status  Show whether a schedule is active
  logs    Show recent scheduled-sync output
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config-file <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG_FILE]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Examples:
  pond schedule start              sync every hour
  pond schedule start --every 15m
  pond schedule status
  pond schedule logs
  pond schedule stop
