src/snapshots/pond__tests__help_serve.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Run the HTTP API server (or MCP over stdio with --transport stdio).

Serves the wire protocol over HTTP on --host:--port. Most agent setups want `pond mcp` instead; `serve` is for the HTTP transport and for supervised deployments.

Usage: pond serve [OPTIONS]

Options:
      --transport <TRANSPORT>
          Wire transport: the HTTP API, or MCP over stdio
          
          [default: http]
          [possible values: http, stdio]

      --host <HOST>
          Bind address for the HTTP transport
          
          [env: POND_HOST]
          [default: 127.0.0.1]

      --port <PORT>
          Bind port for the HTTP transport
          
          [env: POND_PORT]
          [default: 9797]

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Examples:
  pond serve                       HTTP on 127.0.0.1:9797
  pond serve --port 8080
  pond serve --transport stdio     same as `pond mcp`
