src/snapshots/pond__tests__help_sources.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Manage which adapters `pond sync` ingests (the `[sources.*]` entries).

Enabling a source is the explicit owner of source state: `list` shows what is configured and what was detected, `discover` probes and enables interactively, `enable`/`disable` flip one by name. `pond sync` reads these but never writes them.

Usage: pond sources [OPTIONS] <COMMAND>

Commands:
  list      List configured sources (enabled state, path) and detected-but-unconfigured adapters
  discover  Probe this machine for adapters and interactively enable the ones you pick
  enable    Enable a source, discovering its default path if it has no config entry yet
  disable   Disable a source so `pond sync` skips it (kept as `enabled = false`)
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, or `az://`. Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Examples:
  pond sources list                          configured sources + detected adapters
  pond sources discover                      probe this machine, pick what to enable
  pond sources enable claude-code            enable one (discovers its path if needed)
  pond sources disable opencode              stop syncing one, keep it on record
