src/snapshots/pond__tests__help_storage.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Inspect, probe, and switch storage destinations.

Bare `pond storage` shows the resolved destination, its creds binding, and per-table sizes. Subcommands probe a destination (check), switch with guided migration (use), and copy between destinations (migrate).

Usage: pond storage [OPTIONS] [COMMAND]

Commands:
  check    Probe a destination end-to-end
  use      Switch the configured destination, with guided migration
  migrate  Copy canonical data between two storages
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, or `az://`. Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Examples:
  pond storage                                     where data lives, and how big
  pond storage check s3+https://host/bucket/pond   probe a destination end-to-end
  pond storage use s3+https://host/bucket/pond     migrate to it and switch config
